@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.114 2005/03/29 04:36:14 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.115 2005/03/29 05:56:30 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  28 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Added 'append_log=True' to all spawn() calls using logfile=
 
   28 Mar 2005; Preston Cody <codeman@gentoo.org>
   rewrote filesystem_tools.  looks like it works so ripping out all the old
